main home page added

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,14 @@ github:
 gems:
   - jekyll-paginate
   - jekyll-paginate-multiple
+
+
+
+#usernames
+twitter_username:     r3bl_
+github_username:      aleksandar-todorovic
+linkedin_username:    aleksandartodorovic
+facebook_username:    aleksandar.todorovic.r3bl
+instagram_username:   username
+gmail_address:        gmail
+
