_config file updated with social usernames

--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,10 @@ gems:
 
 
 #usernames
-twitter_username:     r3bl_
-github_username:      aleksandar-todorovic
-linkedin_username:    aleksandartodorovic
-facebook_username:    aleksandar.todorovic.r3bl
-instagram_username:   username
-gmail_address:        gmail
+twitter_username:     theboywhosawit
+github_username:      techcentaur
+linkedin_username:    ankitsolanki03
+facebook_username:    https://www.facebook.com/profile.php?id=100012319235305
+instagram_username:   ank.it42
+gmail_address:        ankit03june@gmail.com
 
