added reddit in _config.yml and social networks

--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,4 @@ linkedin_username:    ankitsolanki03
 facebook_username:    https://www.facebook.com/profile.php?id=100012319235305
 instagram_username:   ank.it42
 gmail_address:        ankit03june@gmail.com
-
+reddit_username:      callMeSpacetime
