ADD: new blogging category :: New: Post -> Philosophy

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ paginate_multiple:
     paginate_path: '/writings/page:num/'
     sub_dir: '/writings'
   - paginate: 10
-    paginate_path: '/quotes/page:num'
-    sub_dir: '/quotes'
+    paginate_path: '/philosophy/page:num'
+    sub_dir: '/philosophy'
 
 
 
